--- a/templates/dontoverdose/displayDrug.html
+++ b/templates/dontoverdose/displayDrug.html
@@ -19,7 +19,7 @@
                     <tr>
                         {% comment %} <th></th>
                         <th>NPI</th> {% endcomment %}
-                        <th>Link to click</th>
+                        <th>Show Top 10 Prescribers</th>
                         <th>Drug Name</th>
                         <th>Is Opioid?</th>
                         
