--- a/templates/dontoverdose/addPrescriber.html
+++ b/templates/dontoverdose/addPrescriber.html
@@ -10,7 +10,7 @@
                 <td>
                     <!-- NPI --> 
                     <label for='NPI'>Enter the NPI:</label>
-                    <input type="text" name='NPI' id='npi' autofocus required>
+                    <input type="text" name='NPI' id='npi' placeholder="Enter the 10-digit NPI" autofocus required>
                 </td>
             </tr>
             <tr>
@@ -82,11 +82,11 @@
                 <td>
                     <!-- TOTAL --> 
                     <label for='total'>Enter the total number of prescriptions:</label>
-                    <input type="text" name='total' id='totalprescriptions' required>
+                    <input type="text" name='total' id='totalprescriptions' value='0' required>
                 </td>
             </tr>
         </table>
-        <br><br>
+        <br>
         <input type="submit" value="Submit">
     </form>
         
