--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
           </div>
         </div>
         <div class="col-lg-4 col-md-6 col-12">
-          <h2>Testimonials</h2>
+          <h2 id='testimonials'>Testimonials</h2>
           <ul class="list-unstyled">
             <li class="media">
               <img class="mr-3" src="../BFD_WebDev/images/35X35.gif" alt="Generic placeholder image">
@@ -71,7 +71,7 @@
           </ul>
         </div>
         <div class="col-lg-4 col-12">
-          <h2>About Us</h2>
+          <h2 id='aboutUs'>About Us</h2>
           <p>Group I-8 recognized a massive need for the publication of this data. We knew that if we didn't deploy by Friday, Dec 3, then 50 other similar websites with the same data was going to rise from the dust and steal our troph. So we acted fast and promptly. And now, hopefully we win the prize in tex....as ?!?!?!&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
           <p>More important, government officials and public health offices have made known to the rising concern of prescription drug abuse and reached out to us for help in creating the tool for health professionals, government agencies and citizens alike.&nbsp; &nbsp; &nbsp; &nbsp;</p>
         </div>
