--- a/templates/base.html
+++ b/templates/base.html
@@ -29,8 +29,8 @@
     {%endblock%}
 
 
-    <br><br><br><br><br><br><br><br> <br><br><br><br><br><br><br><br><br><br><br>
-    {% comment %} <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>   {% endcomment %}
+    {% comment %} THIS IS JUST FOR NOW, we can take out later! {% endcomment %}
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  <br><br><br><br><br><br><br><br>  
 
 <!-- FOOTER -->
 <div class="daddy">
@@ -78,16 +78,17 @@
       </div>
     </div>
     <hr>
-      <footer class="text-center">
-        <div class="container">
-          <div class="row">
-            <div class="col-12">
-              <p>Copyright © Group I-8. All rights reserved.</p>
-            </div>
-          </div>
-        </div>
-    </footer>
+     
 </div>
+<footer class="text-center">
+  <div class="container">
+    <div class="row">
+      <div class="col-12">
+        <p>Copyright © Group I-8. All rights reserved.</p>
+      </div>
+    </div>
+  </div>
+</footer>
       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery-3.4.1.min.js"></script>
       <!-- Include all compiled plugins (below), or include individual files as needed -->
