--- a/templates/dontoverdose/allDrugs.html
+++ b/templates/dontoverdose/allDrugs.html
@@ -28,7 +28,7 @@
                 <table>
                     <tr>
                         <th>Drug Name</th>
-                        <th>Opioid?</th>
+                        <th>Is Opioid?</th>
                     </tr>
                     {% for drug in drug_list %}           
                     <tr>
