--- a/templates/dontoverdose/index.html
+++ b/templates/dontoverdose/index.html
@@ -87,7 +87,7 @@
       <p class="card-text">Learn about the current crisis by following the link below.</p>
       <br>      
       {% comment %} <a href="#" class="mybutton">More Stats &amp; Analytics&nbsp;&nbsp;</a> {% endcomment %}
-      <a href="https://www.fda.gov/drugs" class="mybutton">Click Me to Learn More</a>
+      <a href="http://www.utahnaloxone.org/" class="mybutton">Click Me to Learn More</a>
 
     </div>
     <br>
@@ -108,15 +108,15 @@
        <br><br><br>
        <p class="card-text">Contact Us</p>
        <br>
-       <a class="mybutton" href="#contactbottom">Click</a>
+       <a class="mybutton" href="#contactbottom">See Contact Information</a>
        <br><br><br>
        <p class="card-text">Testimonials</p>
        <br>
-       <a class="mybutton" href="#testimonials">Click</a>
+       <a class="mybutton" href="#testimonials">See Testimonials</a>
        <br><br><br>
        <p class="card-text">About Us</p>
        <br>
-       <a class="mybutton" href="#aboutUs">Click</a>
+       <a class="mybutton" href="#aboutUs">Learn More About Us</a>
        <br><br>
      </div>
      
@@ -142,4 +142,6 @@
  <div class="container py-sm-4"> </div>
 </div>
 </div>
+
+
 {%endblock%}
