--- a/templates/dontoverdose/addPrescriber.html
+++ b/templates/dontoverdose/addPrescriber.html
@@ -46,10 +46,22 @@
 
                     <label for='prescriber_credentials'>Select the credentials:</label>
                     <select name='prescriber_credentials' id='credentials' required>
+                        <option value= "ANP">ANP</option>
+                        <option value= "BCENP">BCENP</option>
+                        <option value= "CNM">CNM</option>
+                        <option value= "CNP">CNP</option>
+                        <option value= "D.D.S">D.D.S</option>
+                        <option value= "D.M.D.">D.M.D.</option>
+                        <option value= "D.N.P.">D.N.P.</option>
+                        <option value= "D.O.">D.O.</option>
+                        <option value= "D.P.M.">D.P.M</option>
+                        <option value= "EN.P">EN.P</option>
+
+                        <option value= "M.B.">M.B.</option>
+
                         <option value= "M.D.">M.D.</option>
-                        <option value= "N.D.">N.D.</option>
-                        <option value= "R.A.">R.A.</option>
-                        <option value= "H.K.">H.K.</option>
+                        <option value= "N.P.">N.P.</option>
+                        
                         <option value= "Other">Other</option>
                     </select>
                 </td>
@@ -66,54 +78,52 @@
                         <option value= "AL">Alabama</option>
                         <option value= "AR">Arkansas</option>
                         <option value= "AZ">Arizona</option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
-                        <option value= ""></option>
+                        <option value="CA">California</option>
+                        <option value="CO">Colorado</option>
+                        <option value="CT">Connecticut</option>
+                        <option value="DE">Delaware</option>
+                        <option value="FL">Florida</option>
+                        <option value="GA">Georgia</option>
+                        <option value="HI">Hawaii</option>
+                        <option value="ID">Idaho</option>
+                        <option value="IL">Illinois</option>
+                        <option value="IN">Indiana</option>
+                        <option value="IA">Iowa</option>
+                        <option value="KS">Kansas</option>
+                        <option value="KY">Kentucky</option>
+                        <option value="LA">Louisiana</option>
+                        <option value="ME">Maine</option>
+                        <option value="MD">Maryland</option>
+                        <option value="MA">Massachusetts</option>
+                        <option value="MI">Michigan</option>
+                        <option value="MN">Minnesota</option>
+                        <option value="MS">Mississippi</option>
+                        <option value="MO">Missouri</option>
+                        <option value="MT">Montana</option>
+                        <option value="NE">Nebraska</option>
+                        <option value="NV">Nevada</option>
+                        <option value="NH">New Hampshire</option>
+                        <option value="NJ">New Jersey</option>
+                        <option value="NM">New Mexico</option>
+                        <option value="NY">New York</option>
+                        <option value="NC">North Carolina</option>
+                        <option value="ND">North Dakota</option>
+                        <option value="OH">Ohio</option>
+                        <option value="OK">Oklahoma</option>
+                        <option value="OR">Oregon</option>
+                        <option value="PA">Pennsylvania</option>
+                        <option value="RI">Rhode Island</option>
+                        <option value="SC">South Carolina</option>
+                        <option value="SD">South Dakota</option>
+                        <option value="TN">Tennessee</option>
+                        <option value="TX">Texas</option>
+                        <option value="UT">Utah</option>
+                        <option value="VT">Vermont</option>
+                        <option value="VA">Virginia</option>
+                        <option value="WA">Washington</option>
+                        <option value="WV">West Virginia</option>
+                        <option value="WI">Wisconsin</option>
+                        <option value="WY">Wyoming</option>
                     </select>
                 </td>
             </tr>
