--- a/templates/dontoverdose/displayPrescriberAndDrugs.html
+++ b/templates/dontoverdose/displayPrescriberAndDrugs.html
@@ -77,10 +77,14 @@
         {{ Triple.qtyprescribed }}   
     </td>
     {% comment %} NOT SURE WHAT GOES HERE...JAMES HELP? {% endcomment %}
+{% comment %} <tr>  {% endcomment %}
     <td style="text-align: center;">
-        AVG GOES HERE
+        {{average.iCount}}
+        
     </td>
+{% comment %} </tr> {% endcomment %}
 {%endfor%}
+
 </table>
 </div>
 
