--- a/templates/dontoverdose/topTenDrugs.html
+++ b/templates/dontoverdose/topTenDrugs.html
@@ -37,21 +37,24 @@
 
 <tr>
     <th style="text-align: center;">Prescriber NPI</th>
-    <th style="text-align: center;">Total Sold By Prescriber </th>
+    <th style="text-align: center;">Prescriber detail</th>
 </tr>
 
 
 <h1>Prescriber Information</h1>
 
-{% for Triple in our_drugs %}
+{% for Prescriber in Prescriber_info %}
 <tr>
     <td style="text-align: center;">
-
-        {{ Triple.npi }}
+        {{ Prescriber }}
      </td>
-    <td style="text-align: center;">
-        {{ Triple.qtyprescribed }}   
-    </td>
+     <td style="text-align: center;">
+     <form name='form' method="get" action = {% url 'show_prescribed_drugs' %}>
+        <label for='NPI' ></label>
+        <input type="text"  name='NPI' id='NPI' hidden value={{Prescriber}}> 
+            <button type = "submit">View Detail</button>
+    </form> 
+     </td>
 {%endfor%}
 </table>
 </div>
