--- a/templates/dontoverdose/allPrescribers.html
+++ b/templates/dontoverdose/allPrescribers.html
@@ -9,8 +9,9 @@
             <div class="intro">
                 <div class="intro-text">
                   <h1>Prescribers</h1>
-                  <h3>Real hard stuff to swollow goes here&nbsp;</h3>
-                  <p>Write here till your heart is content</p>
+                  {% comment %} <h3>Real hard stuff to swollow goes here&nbsp;</h3>
+                  <p>Write here till your heart is content</p> {% endcomment %}
+                  <p>Current list of all the prescribers in the database.</p>
                 </div>
                 <a class="mybutton" href="{% url 'addPrescriber' %}">Add New Prescriber</a>
                 <br>
