--- a/templates/dontoverdose/sqlStats.html
+++ b/templates/dontoverdose/sqlStats.html
@@ -67,30 +67,99 @@
 </tr>
 
 <br>
-{% comment %} <p>LIST OF ALL THE DRUGS {% endcomment %}
+<h1> Drug and Prescriber Statistics
 <br>
-
 
 {% comment %} ROW 1...SQL 1 {% endcomment %}
 <tr>
     <td style="text-align: center;">
-        Number of people selling drugs
+        Perecentage of National prescriptions that contained opioids
      </td>
     <td style="text-align: center;">
-        1  
+        5%  
     </td>
 </tr>
+
+{% comment %} ROW 7...SQL 7 {% endcomment %}
+<tr>
+    <td style="text-align: center;">
+        Perecentage of Utah prescriptions that contained opioids
+     </td>
+    <td style="text-align: center;">
+        7%
+    </td>
+</tr>
+
+
+
+
+
 
 
 {% comment %} ROW 2...SQL 2 {% endcomment %}
 <tr>
     <td style="text-align: center;">
-        Average count of all
+        Perecentage of National prescribers that do prescribe opioids
      </td>
     <td style="text-align: center;">
-        100  
+        79%   
     </td>
 </tr>
+
+{% comment %} ROW 3...SQL 3 {% endcomment %}
+<tr>
+    <td style="text-align: center;">
+        Perecentage of Utah prescribers that do prescribe opioids
+     </td>
+    <td style="text-align: center;">
+         84%
+    </td>
+</tr>
+
+{% comment %} ROW 6...SQL 6 {% endcomment %}
+<tr>
+    <td style="text-align: center;">
+        Perecentage of National prescribers with prescription count greater than the national average
+    </td>
+    <td style="text-align: center;">
+        34%
+    </td>
+</tr>
+
+{% comment %} ROW 4...SQL 4 {% endcomment %}
+<tr>
+    <td style="text-align: center;">
+        Perecentage of Utah prescribers with prescription count greater than the national average
+     </td>
+    <td style="text-align: center;">
+        22%
+    </td>
+</tr>
+
+
+
+
+
+{% comment %} ROW 5...SQL 5 {% endcomment %}
+<tr>
+    <td style="text-align: center;">
+        National average for number of prescriptions per prescriber
+     </td>
+    <td style="text-align: center;">
+        4,005
+    </td>
+</tr>
+
+{% comment %} ROW 5...SQL 5 {% endcomment %}
+<tr>
+    <td style="text-align: center;">
+        Utah average for number of prescriptions per prescriber
+     </td>
+    <td style="text-align: center;">
+        2,638
+    </td>
+</tr>
+
 
 </table>
 </div>
