--- a/templates/dontoverdose/displayPrescriberAndDrugs.html
+++ b/templates/dontoverdose/displayPrescriberAndDrugs.html
@@ -62,7 +62,7 @@
 <tr>
     <th style="text-align: center;">Drug Name</th>
     <th style="text-align: center;">Total Count Sold By Prescriber</th>
-    <th style="text-align: center;">Average sold by all prescribers</th>
+    <th>Average Sold by all Prescribers</th>
 </tr>
 
 <h1>Drug Information</h1>
@@ -76,25 +76,23 @@
     <td style="text-align: center;">
         {{ Triple.qtyprescribed }}   
     </td>
+        
+</tr>
     {% comment %} NOT SURE WHAT GOES HERE...JAMES HELP? {% endcomment %}
 {% comment %} <tr>  {% endcomment %}
-    <td style="text-align: center;">
-        {{average.iCount}}
-        
-    </td>
-{% comment %} </tr> {% endcomment %}
-{%endfor%}
-
-</table>
-</div>
+    {%endfor%}
 
 
- 
-</table>
-</div>
-
-
-</div>
+{% for average in average %}           
+        <tr>
+            
+            <td style="text-align: center;">
+                {{average}}
+            </td>
+            
+        </tr>
+    {% endfor %} 
+    </table>
 
 </section>
 
