--- a/templates/base.html
+++ b/templates/base.html
@@ -30,10 +30,10 @@
 
 
     {% comment %} THIS IS JUST FOR NOW, we can take out later! {% endcomment %}
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>  <br><br><br><br><br><br><br><br>  
+    <br><br><br><br><br><br><br><br><br>
 
 <!-- FOOTER -->
-<div class="daddy">
+<div class="daddy" style="width: 100%">
   <div class="container">
       <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-6 mb-md-0 mb-2">
@@ -44,25 +44,17 @@
           <u>Phone : 385-333-439</u>
           </address>
           <h4>Our Supporters&nbsp;</h4>
-          <div class="row">
-            <div class="col-2"><img class="rounded-circle" src="../BFD_WebDev/images/32X32.gif" alt=""></div>
-            <div class="col-2"><img class="rounded-circle" src="../BFD_WebDev/images/32X32.gif" alt=""></div>
-            <div class="col-2"><img class="rounded-circle" src="../BFD_WebDev/images/32X32.gif" alt=""></div>
-            <div class="col-2"><img class="rounded-circle" src="../BFD_WebDev/images/32X32.gif" alt=""></div>
-          </div>
         </div>
         <div class="col-lg-4 col-md-6 col-12">
           <h2 id='testimonials'>Testimonials</h2>
           <ul class="list-unstyled">
             <li class="media">
-              <img class="mr-3" src="../BFD_WebDev/images/35X35.gif" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">Heading 1</h5>
                 <p class="mb-0">We should quote tikTokers! hahaha&nbsp;</p>
               </div>
             </li>
             <li class="media my-4">
-              <img class="mr-3" src="../BFD_WebDev/images/35X35.gif" alt="Generic placeholder image">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">Heading 2</h5>
                 <p class="mb-0">And then quote the boring lady&nbsp;&nbsp;</p>
@@ -76,9 +68,7 @@
           <p>More important, government officials and public health offices have made known to the rising concern of prescription drug abuse and reached out to us for help in creating the tool for health professionals, government agencies and citizens alike.&nbsp; &nbsp; &nbsp; &nbsp;</p>
         </div>
       </div>
-    </div>
-    <hr>
-     
+    </div>   
 </div>
 <footer class="text-center">
   <div class="container">
